# sphinx-d2

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/source/_ext/: helloworld.py  todo.py
docs/source/sphinx_d2/: sphinx_d2.main.rst
src/: main.py
src/sphinx_d2/: __about__.py  __init__.py  main.py
tests/: test_main.py
