[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinx-d2"
dynamic = ["version"]
description = 'D2 integration for sphinx'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Murillo Bianconi", email = "murillo.bianconi@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/mcbianconi/sphinx-d2#readme"
Issues = "https://github.com/mcbianconi/sphinx-d2/issues"
Source = "https://github.com/mcbianconi/sphinx-d2"

[tool.hatch.version]
path = "src/sphinx_d2/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "sphinx",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/sphinx_d2 tests}"

[tool.coverage.run]
source_pkgs = ["sphinx_d2", "tests"]
branch = true
parallel = true
omit = [
  "src/sphinx_d2/__about__.py",
]

[tool.coverage.paths]
sphinx_d2 = ["src/sphinx_d2", "*/sphinx-d2/src/sphinx_d2"]
tests = ["tests", "*/sphinx-d2/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
